windows build in readme